--- a/ESIndexingService/App.config
+++ b/ESIndexingService/App.config
@@ -6,6 +6,10 @@
   <appSettings>    
     <add key="ElasticSearchURL" value="http://localhost:9200" />
     <add key="IndexName" value="pdfservice3" />
+    <add key="SPTenantId" value="" />
+    <add key="SPClientId" value="" />
+    <add key="SPClientSecret" value="" />
+    <add key="SPSiteId" value="" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
