--- a/ESIndexingService/App.config
+++ b/ESIndexingService/App.config
@@ -1,9 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <startup> 
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
   </startup>
-  <appSettings>    
+  <connectionStrings>
+    <add name="UPubPlatBaseDb3" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|UPubPlatBaseDB.mdf;Initial Catalog=UPubPlatBaseDB;MultipleActiveResultSets=True;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>  
+  <appSettings>
     <add key="ElasticSearchURL" value="http://localhost:9200" />
     <add key="IndexName" value="pdfservice3" />
     <add key="SPTenantId" value="" />
@@ -19,4 +26,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
