--- a/ESIndexingService/packages.config
+++ b/ESIndexingService/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Elasticsearch.Net" version="7.16.0" targetFramework="net462" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net462" />
   <package id="IKVM" version="8.1.5717.0" targetFramework="net462" />
+  <package id="log4net" version="2.0.14" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.6.0" targetFramework="net462" />
   <package id="NEST" version="7.16.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net462" />
